--- a/src/main/resources/templates/user/cadastroUsuario.html
+++ b/src/main/resources/templates/user/cadastroUsuario.html
@@ -22,21 +22,22 @@
 </head>
 
 <body id="body-pd">
-  <script th:src="@{/js/menuTamplate.js}" type="text/javascript"></script>
+  <div th:insert="components/menuTamplate :: menuTamplate(tela='usuario')"></div>
 
   <div id="page-content-wrapper row">
     <!--BODY da página-->
     <div class="m-4 pt-4">
       <div class="p-4 rounded-4 lightMode">
 
-        <form class="needs-validation" novalidate>
+        <form th:object="${usuario}" action="#" th:action="@{/cadastroUsuario/save/{id}(id=${usuario.id})}"
+          method="post" class="needs-validation" novalidate>
 
           <div class="form-row">
             <h1>Cadastro de Usuários</h1>
           </div>
 
           <div class="form-check p-3">
-            <input checked class="form-check-input" type="checkbox" id="ativoCheckBox">
+            <input th:field="*{ativo}" class="form-check-input" type="checkbox" id="ativoCheckBox">
             <label class="form-check-label" for="ativoCheckBox">
               Ativo
             </label>
@@ -47,7 +48,8 @@
               <label for="validationNome">Nome (Obrigatório)</label>
               <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
                 data-bs-content="Escolha um nome para o Usuário">?</button>
-              <input type="text" class="form-control lightMode" id="validationNome" placeholder="Nome" required>
+              <input th:field="*{nome}" type="text" class="form-control lightMode" id="validationNome"
+                placeholder="Nome" required>
               <div class="valid-feedback">
                 Nome válido!
               </div>
@@ -62,8 +64,8 @@
                 <label for="validationEmail">E-mail (Obrigatório)</label>
                 <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
                   data-bs-content="Coloque o email utilizado pelo funcionário">?</button>
-                <input type="text" class="form-control lightMode" id="validationEmail" placeholder="exemplo@email.com"
-                  required>
+                <input th:field="*{email}" type="text" class="form-control lightMode" id="validationEmail"
+                  placeholder="exemplo@email.com" required>
                 <div class="valid-feedback">
                   E-mail válido!
                 </div>
@@ -77,8 +79,8 @@
                 <label for="validationSenha">Senha (Obrigatório)</label>
                 <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
                   data-bs-content="A senha deve conter caracteres especiais (!@#$), letras maiúsculas, minúsculas e números">?</button>
-                <input type="password" class="form-control lightMode" id="validationSenha" placeholder="********"
-                  required>
+                <input th:field="*{senha}" type="password" class="form-control lightMode" id="validationSenha"
+                  placeholder="********" required>
                 <div class="valid-feedback">
                   Senha Válida!
                 </div>
@@ -110,8 +112,8 @@
                 data-bs-content="Colocar o telefone de contato caso necessário">?</button>
               <div class="input-group">
                 <span class="input-group-text lightMode" id="inputGroupPrepend3">+55</span>
-                <input type="text" class="form-control lightMode" id="validationCelular" placeholder="(12) 12345-6789"
-                  aria-describedby="inputGroupPrepend3">
+                <input type="text" th:field="*{celular}" class="form-control lightMode" id="validationCelular"
+                  placeholder="(12) 12345-6789" aria-describedby="inputGroupPrepend3">
                 <div class="valid-feedback">
                   Preenchido corretamente!
                 </div>
@@ -126,7 +128,7 @@
                 <label for="validationAtuacao">Atuação</label>
                 <button type="button" class="btn btn-sm" data-bs-toggle="popover" title="Nome"
                   data-bs-content="Colocar uma descrição da atuação do usuário para facilitar o gerenciamento posterior">?</button>
-                <input type="text" class="form-control lightMode" id="validationAtuacao"
+                <input th:field="*{atuacao}" type="text" class="form-control lightMode" id="validationAtuacao"
                   placeholder="Gerente de Marketing">
                 <div class="valid-feedback">
                   Atuação Válida!
@@ -136,25 +138,109 @@
                 </div>
               </div>
 
+              <!--DASH-->
               <div class="form-row py-3">
                 <h2>Tipo de Acesso ao Sistema</h2>
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="dashCheckBox">
+                  <input class="form-check-input" type="checkbox" id="dashCheckBox" th:field="*{accessDash}">
                   <label class="form-check-label" for="dashCheckBox">
                     Acesso ao Dashboard
                   </label>
                 </div>
+
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="formCheckBox">
-                  <label class="form-check-label" for="formCheckBox">
-                    Acesso ao Formulário
+                  <input class="form-check-input" type="checkbox" id="dashCheckBox" th:field="*{accessManageDash}">
+                  <label class="form-check-label" for="dashCheckBox">
+                    Acesso ao Listar Dashboard
                   </label>
                 </div>
-              </div>
+                <!--DASH-->
+                <!--DOCKER-->
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessDocker}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Listar Docker
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessManageDocker}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Visualizar Docker
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessResgisterDocker}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Cadastro Docker
+                  </label>
+                </div>
+                <!--DOCKER-->
+                <!--Formulário-->
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessForms}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Listar Formulário
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessManageForms}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Visualizar Formulário
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessRegisterForms}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Cadastro Formulário
+                  </label>
+                </div>
+                <!--Formulário-->
+                <!--Usuário-->
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessUsers}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Listar Usuário
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessManageUser}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Visualizar Usuário
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessRegisterUser}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Cadastro Usuário
+                  </label>
+                </div>
+                <!--Usuário-->
+                <!--Clientes-->
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessClients}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Listar Clientes
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessManageClients}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Visualizar Clientes
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" id="formCheckBox" th:field="*{accessRegisterClients}">
+                  <label class="form-check-label" for="formCheckBox">
+                    Acesso ao Cadastro Clientes
+                  </label>
+                </div>
+                <!--Clientes-->
 
-              <div class="row mx-4 d-flex">
-                <button class="btn btn-primary" type="submit">Cadastrar</button>
-              </div>
+                <div class="row mx-4 d-flex">
+                  <button class="btn btn-primary" type="submit">Cadastrar</button>
+                </div>
+
+
         </form>
       </div>
 
@@ -163,14 +249,8 @@
   </div>
   </div>
 
-  <script>
-    var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-    var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-      return new bootstrap.Popover(popoverTriggerEl)
-    }) 
-  </script>
   <script th:src="@{/js/cookies.js}" type="text/javascript"></script>
-  <script th:src="@{/js/validationUsuario.js}" type="text/javascript"></script>
+
 </body>
 
 </html>
